Hero button centered, how-it-works section removed, about-me section updated & instructor image updated

--- a/index.html
+++ b/index.html
@@ -71,46 +71,28 @@
   </div>
 
 
-  <section class="how-it-works">
-    <div class="container split-layout">
-      <div class="text">
-        <h2>Så hjälper jag dig</h2>
-        <p>
-          Jag hjälper gravida och nyblivna mammor att träna, återhämta sig
-          och bygga styrka på ett tryggt och inkännande sätt.
-        </p>
-
-        <ul class="checklist">
-          <li>Trygg & anpassad träning</li>
-          <li>Återhämtning & närvaro</li>
-          <li>Bebis är varmt välkommen</li>
-          <li>Små personliga grupper</li>
-          <li>?Enskilt upplägg?</li>
-        </ul>
-
-        <a href="#courses" class="button primary">Se aktuella kurser</a>
-      </div>
-    </div>
-  </section>
-
     <section class="about me">
       <div class="container split-layout">
         <div class="text">
           <h2>Om mig</h2>
           <p>
-            Hej! Jag heter Tara och är certifierad gravid- och mammatränare
-            och utbildad för att hjälpa kvinnor att träna tryggt under
-            och efter graviditet. Jag har själv två barn 3 år och 6 månader gamla
-            och förstår de unika utmaningar som kommer med att vara en nybliven mamma.
+            Jag är mamma till två barn som har förändrat min syn på hälsa, kropp och livet i
+            grunden. De har lärt mig att hälsa inte handlar om prestation – utan om tålamod,
+            nyfikenhet och självomsorg. Under min första graviditet insåg jag hur lite stöd som
+            fanns för trygg träning före och efter förlossning, och hur osäker jag själv kände mig.
+            Det blev startskottet för MammaMind.
           </p>
           <p>
-            Min passion är att skapa en trygg och stödjande miljö där du kan
-            känna dig bekväm att utforska din kropp och bygga styrka i din egen takt.
+            Med över tio års yogapraktik och utbildningar inom yoga, kost och träning under och
+            efter graviditet erbjuder jag ett inkännande och hållbart stöd. Hos mig får du landa,
+            känna dig sedd och bygga styrka i din egen takt – utan press eller jämförelse. Min
+            önskan är att göra den här omvälvande tiden lite lättare och att skapa en plats där
+            mammor får mötas, vila och växa – tillsammans.
           </p>
         </div>
 
         <div class="image">
-          <img src="assets/images/instructor-about-me.jpg" alt="Tara, instruktör för Mamma Mind">
+          <img src="assets/images/instructor-about-moi.png" alt="Tara, instruktör för MammaMind">
         </div>
       </div>
       </section>
