Updates FAQ, gathers all min-width: 768px in general.css

--- a/index.html
+++ b/index.html
@@ -122,18 +122,34 @@
         <h2>Vanliga frågor</h2>
 
         <details>
-          <summary>Behöver jag vara i form?</summary>
-          <p>Nej, träningen anpassas efter din nivå och dina förutsättningar.</p>
+          <summary>Behöver jag ha tränat innan?</summary>
+          <p>Nej, absolut inte.</p>
+          <p>Kursen passar både dig som är helt ny till träning och dig som har tränat tidigare men
+            vill komma igång tryggt efter graviditet och förlossning. Alla övningar anpassas efter
+            din kropp och dina förutsättningar.
+          </p>
         </details>
 
         <details>
-          <summary>Är detta säkert efter kejsarsnitt?</summary>
-          <p>Ja, med individuella anpassningar och i dialog med dig.</p>
+          <summary>Hur långt efter förlossning kan jag delta?</summary>
+          <p>Du behöver ha genomfört din efterkontroll och fått okej att börja träna. Därefter är
+            du varmt välkommen, oavsett om det gått några månader eller längre tid sedan förlossningen.
+          </p>
+        </details>
+
+        <details>
+          <summary>Är kursen säker efter kejsarsnitt?</summary>
+          <p>Ja, träningen är skonsam och anpassad även för dig som fött med kejsarsnitt.
+            Vi tar hänsyn till ärr, läkning och återhämtning, och fokus ligger på att bygga upp
+            kroppen steg för steg i din takt.
+          </p>
         </details>
 
         <details>
           <summary>Vad händer om jag missar ett tillfälle?</summary>
-          <p>Vi hittar en lösning tillsammans.</p>
+          <p>Om du missar ett tillfälle under kursen finns ett bonustillfälle i slutet av kursen
+            som du kan delta i istället. På så sätt får du möjlighet att ta igen passet i mån av plats.
+          </p>
         </details>
       </div>
 
