Updates thanks page, minor tweaks in index

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
             Med över tio års yogapraktik och utbildningar inom yoga, kost och träning under och
             efter graviditet erbjuder jag ett inkännande och hållbart stöd. Hos mig får du landa,
             känna dig sedd och bygga styrka i din egen takt – utan press eller jämförelse. Min
-            önskan är att göra den här omvälvande tiden lite lättare och att skapa en plats där
-            mammor får mötas, vila och växa – tillsammans.
+            önskan är att göra den här omvälvande tiden kring graviditeten lite lättare och att
+            skapa en plats där mammor får mötas, vila och växa – tillsammans.
           </p>
         </div>
 
@@ -103,7 +103,7 @@
 
   <section class="courses" id="courses">
     <div class="container">
-      <h2>Aktuella kurser</h2>
+      <h2>Aktuella kurser 2026</h2>
 
       <div class="course-list">
         <article class="course-card">
