--- a/subpages/thanks.html
+++ b/subpages/thanks.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="/styles/logo.css" />
 </head>
     <body>
-
         <header class="hero thank-you">
             <div class="container hero-layout">
                 <div class="hero-logo">
@@ -21,19 +20,23 @@
                          class="logo">
                 </div>
 
-                <h1>Tack för din anmälan!</h1>
+                <h1>Tack för din anmälan och varmt välkommen till MammaMind🌸</h1>
 
             </div>
         </header>
 
         <main>
-            <h2>Ett bekräftelsemejl med mer info om kursen och betalning kommer inom 48 timmar.</h2>
+            <div class="container narrow">
+            <h2>Ett bekräftelsemejl med mer info om kursen och betalningen skickar jag inom
+                48 timmar.</h2>
+                <h3> Varma hälsningar, <br>
+                    Tara - MammaMind</h3>
             <a href="/index.html" class="button secondary">Tillbaka till startsidan</a>
+            </div>
         </main>
 
         <footer>
             <p>© 2026 · MammaMind · Trygg träning för gravida & nyblivna mammor</p>
         </footer>
-
     </body>
 </html>
