--- a/courses/trygg-aterstart-for-mammor.html
+++ b/courses/trygg-aterstart-for-mammor.html
@@ -30,7 +30,7 @@
     <section class="course-detail">
         <div class="container narrow">
 
-            <h1>🌿 Trygg återstart efter graviditet</h1>
+            <h1>Trygg återstart efter graviditet</h1>
 
             <p class="lead">
                 Den här kursen är för dig som vill komma igång med träning på ett tryggt, inkännande
@@ -55,7 +55,7 @@
                 <li><strong>Längd:</strong> 8 veckor</li>
                 <li><strong>Dag & Tid:</strong> Torsdagar kl. 10.00-11.00</li>
                 <li><strong>Plats:</strong> Eriksberg</li>
-                <li><strong>Bebisar:</strong> Varmt välkomna👶</li>
+                <li><strong>Bebisar:</strong> Varmt välkomna</li>
                 <li><strong>Förkunskapskrav:</strong> Efterkontroll genomförd</li>
             </ul>
 
@@ -126,7 +126,7 @@
 </main>
 
 <footer>
-    <p>© 2026 · Mamma Mind</p>
+    <p>© 2026 · MammaMind</p>
 </footer>
 
 </body>
