--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
       <div class="contact">
         <p>
-          👉Låter det intressant? Tveka inte på att kontakta mig för mer info!
+          Låter det intressant? Tveka inte på att kontakta mig för mer info!
         </p>
         <a class="button secondary" href="mailto:info@mammamind.se">
           Skicka mail
@@ -108,7 +108,7 @@
       <div class="course-list">
         <article class="course-card">
           <h3>🌿 Trygg återstart efter graviditet</h3>
-          <p>Varje Söndag kl. 15:00–16:00</p>
+          <p>Varje Torsdag kl. 10:00–11:00</p>
           <p>Startdatum: 5 mars 2026</p>
           <a href="courses/trygg-aterstart-for-mammor.html" class="button secondary">Mer info</a>
         </article>
