Vertical height math cleanup, adds footer.css

--- a/courses/trygg-aterstart-for-mammor.html
+++ b/courses/trygg-aterstart-for-mammor.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/styles/buttons.css">
     <link rel="stylesheet" href="/styles/forms.css">
     <link rel="stylesheet" href="/styles/logo.css">
+    <link rel="stylesheet" href="/styles/footer.css" />
 </head>
 
 <body>
@@ -127,7 +128,30 @@
 
 <footer>
     <p>© 2026 · MammaMind</p>
-</footer>
 
+    <div class="footer-contact">
+        <p>
+            Kontakt:
+            <a href="mailto:info@mammamind.se">info@mammamind.se</a>
+        </p>
+
+        <p class="footer-social">
+            <a
+                    href="https://www.instagram.com/mammamind.se/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    aria-label="Följ MammaMind på Instagram"
+                    class="social-link"
+            >
+                <img
+                        src="/assets/svg/instagram-logo-facebook-2-svgrepo-com.svg"
+                        alt=""
+                        class="social-icon"
+                />
+                <span>Instagram</span>
+            </a>
+        </p>
+    </div>
+</footer>
 </body>
 </html>
