--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="/styles/forms.css" />
   <link rel="stylesheet" href="/styles/hero.css" />
   <link rel="stylesheet" href="/styles/logo.css" />
+  <link rel="stylesheet" href="/styles/footer.css" />
 </head>
 
 <body>
@@ -169,7 +170,31 @@
 </main>
 
 <footer>
-  <p>© 2026 · MammaMind · Trygg träning för gravida & nyblivna mammor</p>
+  <p>© 2026 · MammaMind</p>
+
+  <div class="footer-contact">
+    <p>
+      Kontakt:
+      <a href="mailto:info@mammamind.se">info@mammamind.se</a>
+    </p>
+
+    <p class="footer-social">
+      <a
+              href="https://www.instagram.com/mammamind.se/"
+              target="_blank"
+              rel="noopener noreferrer"
+              aria-label="Följ MammaMind på Instagram"
+              class="social-link"
+      >
+        <img
+                src="/assets/svg/instagram-logo-facebook-2-svgrepo-com.svg"
+                alt=""
+                class="social-icon"
+        />
+        <span>Instagram</span>
+      </a>
+    </p>
+  </div>
 </footer>
 
 </body>
