--- a/courses/trygg-aterstart-for-mammor.html
+++ b/courses/trygg-aterstart-for-mammor.html
@@ -47,6 +47,7 @@
                 <li>yoga, andning och meditation</li>
                 <li>återhämtning och närvaro</li>
             </ul>
+            <p>
             Bebisar är varmt välkomna, och träningen sker i små grupper för att skapa trygghet,
             gemenskap och utrymme att möta varje deltagare där hon är.
             </p>
@@ -63,17 +64,18 @@
             <p>
                 Fokus ligger på återhämtning, närvaro och att bygga styrka i din
                 egen takt. Efter passet finns möjlighet att stanna kvar
-                för fika och umgänge om du vill.
+                för fika och umgänge om man vill.
             </p>
 
             <p>
                 💛 Early Bird-erbjudande (t.o.m. 10 februari)
                 Som en extra omtanke till dig som bokar tidigt ingår:
+            </p>
             <ul class="early-bird-meta">
                 <li>500 kr rabatt</li>
                 <li>Goodiebag med produkter till ett värde av ca 700 kr</li>
             </ul>
-
+            <p>
             Early bird-pris: 1 795 kr. Ordinarie pris: 2 295 kr
             Platserna är begränsade för att kunna ge varje mamma en trygg och personlig upplevelse.
             </p>
@@ -137,7 +139,7 @@
 
         <p class="footer-social">
             <a
-                    href="https://www.instagram.com/mammamind.se/"
+                    href="https://www.instagram.com/tara_mammamind/"
                     target="_blank"
                     rel="noopener noreferrer"
                     aria-label="Följ MammaMind på Instagram"
@@ -148,7 +150,7 @@
                         alt=""
                         class="social-icon"
                 />
-                <span>Instagram</span>
+                <span>MammaMind Instagram</span>
             </a>
         </p>
     </div>
