--- a/subpages/thanks.html
+++ b/subpages/thanks.html
@@ -47,7 +47,7 @@
 
                 <p class="footer-social">
                     <a
-                            href="https://www.instagram.com/mammamind.se/"
+                            href="https://www.instagram.com/tara_mammamind/"
                             target="_blank"
                             rel="noopener noreferrer"
                             aria-label="Följ MammaMind på Instagram"
@@ -58,7 +58,7 @@
                                 alt=""
                                 class="social-icon"
                         />
-                        <span>Instagram</span>
+                        <span>MammaMind Instagram</span>
                     </a>
                 </p>
             </div>
