Use primary button styling on all buttons, adds favicon

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Mamma Mind: Trygg träning för gravida & nyblivna mammor</title>
+  <title>MammaMind: Trygg träning för gravida & nyblivna mammor</title>
   <meta name="description" content="Trygg och anpassad träning för gravida och nyblivna mammor i Göteborg." />
+  <link rel="icon" href="/assets/svg/favicon.svg" type="image/svg+xml" />
   <link rel="stylesheet" href="/styles/general.css" />
   <link rel="stylesheet" href="/styles/buttons.css" />
   <link rel="stylesheet" href="/styles/forms.css" />
@@ -39,6 +40,7 @@
 
 
 <main>
+
   <section class="audience">
     <div class="container">
       <h2>Varför MammaMind?</h2>
@@ -54,15 +56,17 @@
         Och kanske viktigast av allt – här finns gemenskap.
         En plats där du inte behöver bära allt själv, och där det är okej att vara precis där du är.
       </p>
+      <p>
+        Låter det intressant? Tveka inte på att kontakta mig för mer info!
+      </p>
 
-      <div class="contact">
-        <p>
-          Låter det intressant? Tveka inte på att kontakta mig för mer info!
-        </p>
-        <a class="button secondary" href="mailto:info@mammamind.se">
-          Skicka mail
-        </a>
+      <div class="contact-button">
+          <a class ="button primary" href="mailto:info@mammamind.se">
+            Skicka mail
+          </a>
       </div>
+
+
 
     </div>
   </section>
@@ -111,11 +115,15 @@
           <h3>🌿 Trygg återstart efter graviditet</h3>
           <p>Varje Torsdag kl. 10:00–11:00</p>
           <p>Startdatum: 5 mars 2026</p>
-          <a href="courses/trygg-aterstart-for-mammor.html" class="button secondary">Mer info</a>
+          <a href="courses/trygg-aterstart-for-mammor.html" class="button primary">Mer info</a>
         </article>
       </div>
     </div>
     </section>
+
+  <div class="container">
+    <hr>
+  </div>
 
   <section class="faq-contact">
     <div class="container two-col">
@@ -157,12 +165,11 @@
       <div class="contact">
         <h2>Kontakta mig</h2>
         <p>
-          Hör gärna av dig om du har frågor eller vill boka en plats.
-          Jag ser fram emot att höra från dig.
+          Hör gärna av dig om du har frågor eller vill boka en plats,
+          jag ser fram emot att höra från dig!
         </p>
-        <a class="button secondary" href="mailto:info@mammamind.se">
-          Skicka mail
-        </a>
+
+
       </div>
     </div>
 </section>
