--- a/subpages/thanks.html
+++ b/subpages/thanks.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Mamma Mind: Trygg träning för gravida & nyblivna mammor</title>
+    <title>MammaMind: Trygg träning för gravida & nyblivna mammor</title>
     <meta name="description" content="Trygg och anpassad träning för gravida och nyblivna mammor i Göteborg." />
+    <link rel="icon" href="/assets/svg/favicon.svg" type="image/svg+xml" />
     <link rel="stylesheet" href="/styles/general.css" />
     <link rel="stylesheet" href="/styles/buttons.css" />
     <link rel="stylesheet" href="/styles/forms.css" />
@@ -32,7 +33,9 @@
                 48 timmar.</h2>
                 <h3> Varma hälsningar, <br>
                     Tara - MammaMind</h3>
-            <a href="/index.html" class="button secondary">Tillbaka till startsidan</a>
+                <div class="contact-button">
+                    <a href="/index.html" class="button primary">Tillbaka till startsidan</a>
+                </div>
             </div>
         </main>
 
