--- a/courses/trygg-aterstart-for-mammor.html
+++ b/courses/trygg-aterstart-for-mammor.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Trygg återstart för mammor | Mamma Mind</title>
     <meta name="description" content="Trygg och inkännande återstart för nyblivna mammor i Göteborg.">
+    <link rel="icon" href="/assets/svg/favicon.svg" type="image/svg+xml" />
     <link rel="stylesheet" href="/styles/general.css">
     <link rel="stylesheet" href="/styles/hero.css"/>
     <link rel="stylesheet" href="/styles/buttons.css">
