hr margin decrease mobile, hero background image overlay fade

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   </div>
 
 
-    <section class="about me">
+    <section class="about about-section">
       <div class="container split-layout">
         <div class="text">
           <h2>Om mig</h2>
@@ -157,7 +157,7 @@
         <details>
           <summary>Vad händer om jag missar ett tillfälle?</summary>
           <p>Om du missar ett tillfälle under kursen finns ett bonustillfälle i slutet av kursen
-            som du kan delta i istället. På så sätt får du möjlighet att ta igen passet i mån av plats.
+            som du kan delta på i mån av plats. På så sätt får du möjlighet att ta igen missade pass.
           </p>
         </details>
       </div>
