More button styling, subpage logo click bug fix, about split layout top start fixed

--- a/courses/trygg-aterstart-for-mammor.html
+++ b/courses/trygg-aterstart-for-mammor.html
@@ -18,7 +18,7 @@
 
 <header class="hero">
     <div class="container sub-hero-layout">
-        <a href="../index.html" class="logo-link">
+        <a href="/index.html" class="logo-link">
             <div class="hero-logo">
                 <img src="../assets/svg/mamma_mind_logo_combined.svg"
                      alt="Mamma Mind"
@@ -34,7 +34,7 @@
 
             <h1>Trygg återstart efter graviditet</h1>
 
-            <p class="lead">
+            <p class="lead-course-description">
                 Den här kursen är för dig som vill komma igång med träning på ett tryggt, inkännande
                 och hållbart sätt efter graviditet och förlossning.
                 Under åtta veckor får du möjlighet att steg för steg återknyta kontakten med din
