--- a/index.html
+++ b/index.html
@@ -113,9 +113,14 @@
       <div class="course-list">
         <article class="course-card">
           <h3>🌿 Trygg återstart efter graviditet</h3>
-          <p>Varje Torsdag kl. 10:00–11:00</p>
-          <p>Startdatum: 5 mars 2026</p>
-          <a href="courses/trygg-aterstart-for-mammor.html" class="button primary">Mer info</a>
+          <p>* Varje Torsdag kl. 10:00–11:00</p>
+          <p>* Startdatum: 5 mars 2026</p>
+          <p>* 8 tillfällen</p>
+
+          <div class="course-cta">
+            <a href="courses/trygg-aterstart-for-mammor.html" class="button primary">Mer info</a>
+          </div>
+
         </article>
       </div>
     </div>
@@ -165,7 +170,7 @@
       <div class="contact">
         <h2>Kontakta mig</h2>
         <p>
-          Hör gärna av dig om du har frågor eller vill boka en plats,
+          Hör gärna av dig via mail eler Instagram om du har frågor eller vill boka en plats,
           jag ser fram emot att höra från dig!
         </p>
 
