Footer syling mobile & web + onHoover styling

--- a/subpages/thanks.html
+++ b/subpages/thanks.html
@@ -22,14 +22,14 @@
                          class="logo">
                 </div>
 
-                <h1>Tack för din anmälan och varmt välkommen till MammaMind🌸</h1>
+                <h1>Tack för din intresseanmälan och varmt välkommen till MammaMind🌸</h1>
 
             </div>
         </header>
 
         <main>
             <div class="container narrow">
-            <h2>Ett bekräftelsemejl med mer info om kursen och betalningen skickar jag inom
+            <h2>Ett bekräftelsemail med mer info om kursen och betalningen skickar jag inom
                 48 timmar.</h2>
                 <h3> Varma hälsningar, <br>
                     Tara - MammaMind</h3>
@@ -39,32 +39,35 @@
             </div>
         </main>
 
-        <footer>
-            <p>© 2026 · MammaMind</p>
+        <footer class="footer-grid">
 
-            <div class="footer-contact">
-                <p>
-                    Kontakt:
-                    <a href="mailto:info@mammamind.se">info@mammamind.se</a>
-                </p>
+            <a href="mailto:info@mammamind.se" class="footer-email">
+                info@mammamind.se
+            </a>
 
-                <p class="footer-social">
-                    <a
-                            href="https://www.instagram.com/tara_mammamind/"
-                            target="_blank"
-                            rel="noopener noreferrer"
-                            aria-label="Följ MammaMind på Instagram"
-                            class="social-link"
-                    >
-                        <img
-                                src="/assets/svg/instagram-logo-facebook-2-svgrepo-com.svg"
-                                alt=""
-                                class="social-icon"
-                        />
-                        <span>MammaMind Instagram</span>
-                    </a>
-                </p>
-            </div>
+            <a
+                    href="https://www.instagram.com/tara_mammamind/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    class="footer-social social-link"
+                    aria-label="Följ MammaMind på Instagram"
+            >
+                <img
+                        src="/assets/svg/instagram-logo-facebook-2-svgrepo-com.svg"
+                        alt=""
+                        class="social-icon"
+                />
+                Instagram
+            </a>
+
+            <a href="/privacy.html" class="footer-privacy">
+                Integritetspolicy
+            </a>
+
+            <p class="footer-copy">
+                © 2026 · MammaMind
+            </p>
+
         </footer>
     </body>
 </html>
