Adds Privacy policy

--- a/courses/trygg-aterstart-for-mammor.html
+++ b/courses/trygg-aterstart-for-mammor.html
@@ -20,7 +20,7 @@
     <div class="container sub-hero-layout">
         <a href="/index.html" class="logo-link">
             <div class="hero-logo">
-                <img src="../assets/svg/mamma_mind_logo_combined.svg"
+                <img src="/assets/svg/mamma_mind_logo_combined.svg"
                      alt="Mamma Mind"
                      class="logo">
             </div>
@@ -150,7 +150,7 @@
         Instagram
     </a>
 
-    <a href="/privacy.html" class="footer-privacy">
+    <a href="/subpages/privacy.html" class="footer-privacy">
         Integritetspolicy
     </a>
 
