--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           <p>* 8 tillfällen</p>
 
           <div class="course-cta">
-            <a href="courses/trygg-aterstart-for-mammor.html" class="button primary">Mer info</a>
+            <a href="/courses/trygg-aterstart-for-mammor.html" class="button primary">Mer info</a>
           </div>
 
         </article>
@@ -202,7 +202,7 @@
     Instagram
   </a>
 
-  <a href="/privacy.html" class="footer-privacy">
+  <a href="/subpages/privacy.html" class="footer-privacy">
     Integritetspolicy
   </a>
 
