--- a/subpages/thanks.html
+++ b/subpages/thanks.html
@@ -60,7 +60,7 @@
                 Instagram
             </a>
 
-            <a href="/privacy.html" class="footer-privacy">
+            <a href="/subpages/privacy.html" class="footer-privacy">
                 Integritetspolicy
             </a>
 
