--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
       <div class="contact">
         <h2>Kontakta mig</h2>
         <p>
-          Hör gärna av dig via mail eler Instagram om du har frågor eller vill boka en plats,
-          jag ser fram emot att höra från dig!
+          Hör gärna av dig via mail eler Instagram om du har frågor eller klicka på Mer info om du
+          du vill veta mer eller boka en plats till en kurs. Jag ser fram emot att höra från dig!
         </p>
 
 
