--- a/subpages/privacy.html
+++ b/subpages/privacy.html
@@ -23,18 +23,20 @@
             </div>
         </a>
 
-        <h1># Integritetspolicy – MammaMind
-
+        <h1> Integritetspolicy – MammaMind </h1>
+        <h2>
             Senast uppdaterad: januari 2026
-
+        </h2>
+        <h1>
             MammaMind värnar om din personliga integritet. Denna integritetspolicy förklarar hur
             vi samlar in, använder och skyddar dina personuppgifter i samband med att du anmäler
-            intresse för våra kurser.</h1>
+            intresse för våra kurser.
+        </h1>
     </div>
 </header>
 <main>
     <div class="container narrow">
-        <p>## 1. Personuppgifter vi samlar in
+        <h2> 1. Personuppgifter vi samlar in
 
             När du skickar in intresseanmälan via formuläret på webbplatsen kan följande uppgifter behandlas:
 
@@ -43,10 +45,10 @@
             * Eventuellt meddelande som du själv väljer att skriva
 
             Vi samlar **endast in de uppgifter du själv aktivt lämnar**.
-        </p>
+        </h2>
 
-        <p>
-        ## 2. Syfte med behandlingen
+        <h2>
+         2. Syfte med behandlingen
 
         De personuppgifter du lämnar används **endast för följande ändamål**:
 
@@ -56,10 +58,10 @@
 
         Vi använder **inte** dina uppgifter för marknadsföring, nyhetsbrev eller andra ändamål.
 
-        </p>
+        </h2>
 
-        <p>
-        ## 3. Rättslig grund enligt GDPR
+        <h2>
+         3. Rättslig grund enligt GDPR
 
         Behandlingen sker med stöd av:
 
@@ -67,10 +69,10 @@
 
         Genom att skicka in formuläret samtycker du till att MammaMind behandlar dina uppgifter för ovan angivet syfte.
 
-        </p>
+        </h2>
 
-        <p>
-        ## 4. Hur uppgifterna hanteras
+        <h2>
+         4. Hur uppgifterna hanteras
 
         Formuläret på webbplatsen hanteras via tjänsten **Formspree**, som används för att ta emot och vidarebefordra formulärmeddelanden till vår e-post.
 
@@ -79,10 +81,10 @@
         👉 Du kan läsa mer om Formsprees dataskydd här:
         [https://formspree.io/legal/privacy-policy](https://formspree.io/legal/privacy-policy)
 
-        </p>
+        </h2>
 
-        <p>
-        ## 5. Lagringstid
+        <h2>
+         5. Lagringstid
 
         Dina personuppgifter sparas endast så länge det behövs för att:
 
@@ -91,19 +93,19 @@
 
         När ärendet är avslutat raderas uppgifterna.
 
-        </p>
+        </h2>
 
-        <p>
-        ## 6. Delning av uppgifter
+        <h2>
+         6. Delning av uppgifter
 
         Vi delar **inte** dina personuppgifter med tredje part, utöver Formspree som teknisk tjänsteleverantör.
 
         Uppgifterna säljs aldrig vidare.
 
-        </p>
+        </h2>
 
-        <p>
-        ## 7. Dina rättigheter
+        <h2>
+         7. Dina rättigheter
 
         Du har enligt GDPR rätt att:
 
@@ -115,23 +117,23 @@
         För att utöva dina rättigheter, kontakta oss via:
 
         📧 **[info@mammamind.se](mailto:info@mammamind.se)**
-        </p>
+        </h2>
 
-        <p>
-            ## 8. Personuppgiftsansvarig
+        <h2>
+             8. Personuppgiftsansvarig
 
             Personuppgiftsansvarig för behandlingen är:
             E-post: <a href="mailto:info@mammamind.se" class="footer-email">
             info@mammamind.se
         </a>
-        </p>
+        </h2>
 
-        <p>
-        ## 9. Ändringar i policyn
+        <h2>
+         9. Ändringar i policyn
 
         Denna integritetspolicy kan komma att uppdateras vid behov. Den senaste versionen finns alltid tillgänglig på webbplatsen.
 
-        </p>
+        </h2>
 
         <h2>
         Tack för ditt förtroende 💛
