html styling of Privay

--- a/subpages/privacy.html
+++ b/subpages/privacy.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="/styles/footer.css" />
 </head>
 <body>
-<header class="hero thank-you">
+<header class="hero privacy-policy">
     <div class="container hero-layout">
         <a href="/index.html" class="logo-link">
             <div class="hero-logo">
@@ -40,87 +40,76 @@
 
             När du skickar in intresseanmälan via formuläret på webbplatsen kan följande uppgifter behandlas:
 
-            * Namn
-            * E-postadress
-            * Eventuellt meddelande som du själv väljer att skriva
+            <li><strong>Namn</strong></li>
+            <li><strong>E-postadress</strong></li>
+            <li><strong>Eventuellt meddelande som du själv väljer att skriva</strong></li>
 
-            Vi samlar **endast in de uppgifter du själv aktivt lämnar**.
+            Vi samlar <strong>endast</strong> in de uppgifter du själv aktivt lämnar
         </h2>
 
-        <h2>
-         2. Syfte med behandlingen
+        <h2> 2. Syfte med insamlingen<br>
 
-        De personuppgifter du lämnar används **endast för följande ändamål**:
+        De personuppgifter du lämnar används <strong>endast</strong> för följande ändamål
 
-        * att kunna kontakta dig via e-post
-        * att skicka information om kursen (t.ex. betalning, startdatum eller praktiska detaljer)
-        * att bekräfta din intresseanmälan
-
-        Vi använder **inte** dina uppgifter för marknadsföring, nyhetsbrev eller andra ändamål.
-
+         <li> att bekräfta din intresseanmälan</li>
+         <li> att kunna kontakta dig via e-post</li>
+         <li> att skicka information om kursen (t.ex. betalning, startdatum eller praktiska detaljer)</li>
+            Vi använder <strong>inte</strong> dina uppgifter för marknadsföring, nyhetsbrev eller andra ändamål.
         </h2>
 
-        <h2>
-         3. Rättslig grund enligt GDPR
+        <h2> 3. Rättslig grund enligt GDPR <br>
 
         Behandlingen sker med stöd av:
 
         **Samtycke (artikel 6.1 a GDPR)**
 
         Genom att skicka in formuläret samtycker du till att MammaMind behandlar dina uppgifter för ovan angivet syfte.
+        </h2>
+
+        <h2>4. Hur uppgifterna hanteras<br>
+            Formuläret på webbplatsen hanteras via tjänsten <strong>Formspree</strong>, som används för att ta
+            emot och vidarebefordra formulärmeddelanden till MammaMinds e-post.
+
+            Formspree behandlar uppgifterna enligt gällande dataskyddslagstiftning (GDPR) och
+            fungerar som personuppgiftsbiträde.
+
+            Du kan läsa mer om Formsprees datalagring & integritetspolicy här:  <a href="https://formspree.io/legal/privacy-policy">Formspree privacy policy</a>
+        </h2>
+
+        <h2>5. Lagringstid <br>
+
+            Dina personuppgifter sparas endast så länge det behövs för att:
+
+            <li>hantera din intresseanmälan</li>
+            <li>fullfölja kontakten kring aktuell kurs</li>
+            Uppgifter raderas senast några månader efter senaste kontakt kring kursen.
 
         </h2>
 
-        <h2>
-         4. Hur uppgifterna hanteras
+        <h2>6. Delning av uppgifter <br>
 
-        Formuläret på webbplatsen hanteras via tjänsten **Formspree**, som används för att ta emot och vidarebefordra formulärmeddelanden till vår e-post.
-
-        Formspree behandlar uppgifterna enligt gällande dataskyddslagstiftning (GDPR) och fungerar som personuppgiftsbiträde.
-
-        👉 Du kan läsa mer om Formsprees dataskydd här:
-        [https://formspree.io/legal/privacy-policy](https://formspree.io/legal/privacy-policy)
-
-        </h2>
-
-        <h2>
-         5. Lagringstid
-
-        Dina personuppgifter sparas endast så länge det behövs för att:
-
-        * hantera din intresseanmälan
-        * fullfölja kontakten kring aktuell kurs
-
-        När ärendet är avslutat raderas uppgifterna.
-
-        </h2>
-
-        <h2>
-         6. Delning av uppgifter
-
-        Vi delar **inte** dina personuppgifter med tredje part, utöver Formspree som teknisk tjänsteleverantör.
+        Vi delar <strong>inte</strong> dina personuppgifter med tredje part, utöver Formspree
+            som teknisk tjänsteleverantör.
 
         Uppgifterna säljs aldrig vidare.
 
         </h2>
 
-        <h2>
-         7. Dina rättigheter
+        <h2>7. Dina rättigheter <br>
 
-        Du har enligt GDPR rätt att:
+            Du har enligt GDPR rätt att:
 
-        * begära tillgång till dina personuppgifter
-        * begära rättelse av felaktiga uppgifter
-        * begära att dina uppgifter raderas
-        * återkalla ditt samtycke när som helst
+            <li>begära tillgång till dina personuppgifter</li>
+            <li>begära rättelse av felaktiga uppgifter</li>
+            <li>begära att dina uppgifter raderas</li>
+            <li>återkalla ditt samtycke när som helst</li>
 
-        För att utöva dina rättigheter, kontakta oss via:
-
-        📧 **[info@mammamind.se](mailto:info@mammamind.se)**
+            För att utöva dina rättigheter, kontakta oss via: <a href="mailto:info@mammamind.se" class="footer-email">
+                info@mammamind.se
+            </a>
         </h2>
 
-        <h2>
-             8. Personuppgiftsansvarig
+        <h2>8. Personuppgiftsansvarig <br>
 
             Personuppgiftsansvarig för behandlingen är:
             E-post: <a href="mailto:info@mammamind.se" class="footer-email">
@@ -128,17 +117,20 @@
         </a>
         </h2>
 
-        <h2>
-         9. Ändringar i policyn
+        <h2> 9. Ändringar i policyn<br>
+
 
         Denna integritetspolicy kan komma att uppdateras vid behov. Den senaste versionen finns alltid tillgänglig på webbplatsen.
-
         </h2>
 
         <h2>
         Tack för ditt förtroende 💛
         MammaMind
         </h2>
+
+        <div class="contact-button">
+            <a href="/index.html" class="button primary">Tillbaka till startsidan</a>
+        </div>
     </div>
 </main>
 <footer class="footer-grid">
