Add form consent checkbox and link to Privacy

--- a/courses/trygg-aterstart-for-mammor.html
+++ b/courses/trygg-aterstart-for-mammor.html
@@ -121,9 +121,28 @@
                     ></textarea>
                 </div>
 
+                <div class="form-field form-consent">
+                    <label class="checkbox-label">
+                        <input
+                                type="checkbox"
+                                name="consent"
+                                required
+                        >
+                        Jag godkänner
+                        <a href="/subpages/privacy.html" target="_blank" rel="noopener noreferrer">
+                            integritetspolicyn
+                        </a>
+                        och att mina uppgifter används för att hantera min intresseanmälan.
+                    </label>
+                </div>
+
                 <button type="submit" class="button primary">
                     Skicka intresseanmälan
                 </button>
+
+                <p class="form-note">
+                    Vi använder dina uppgifter endast för att kontakta dig angående kursen.
+                </p>
             </form>
         </section>
     </div>
