--- a/subpages/privacy.html
+++ b/subpages/privacy.html
@@ -82,8 +82,8 @@
 
             <li>hantera din intresseanmälan</li>
             <li>fullfölja kontakten kring aktuell kurs</li>
+            <li>Skicka ut information kring pågående kurs</li>
             Uppgifter raderas senast några månader efter senaste kontakt kring kursen.
-
         </h2>
 
         <h2>6. Delning av uppgifter <br>
@@ -92,7 +92,6 @@
             som teknisk tjänsteleverantör.
 
         Uppgifterna säljs aldrig vidare.
-
         </h2>
 
         <h2>7. Dina rättigheter <br>
@@ -118,15 +117,10 @@
         </h2>
 
         <h2> 9. Ändringar i policyn<br>
-
-
-        Denna integritetspolicy kan komma att uppdateras vid behov. Den senaste versionen finns alltid tillgänglig på webbplatsen.
+            Denna integritetspolicy kan komma att uppdateras vid behov. Den senaste versionen finns alltid tillgänglig på webbplatsen.
         </h2>
 
-        <h2>
-        Tack för ditt förtroende 💛
-        MammaMind
-        </h2>
+        <h2>Tack för ditt förtroende, <br> MammaMind </h2>
 
         <div class="contact-button">
             <a href="/index.html" class="button primary">Tillbaka till startsidan</a>
