CSP meta headers

--- a/courses/trygg-aterstart-for-mammor.html
+++ b/courses/trygg-aterstart-for-mammor.html
@@ -6,6 +6,17 @@
     <title>Trygg återstart för mammor | Mamma Mind</title>
     <meta name="description" content="Trygg och inkännande återstart för nyblivna mammor i Göteborg.">
     <link rel="icon" href="/assets/svg/favicon.svg" type="image/svg+xml" />
+    <meta
+            http-equiv="Content-Security-Policy"
+            content="
+    default-src 'self';
+    img-src 'self' https:;
+    style-src 'self' 'unsafe-inline';
+    form-action https://formspree.io;
+    base-uri 'self';
+    object-src 'none';
+  "
+    >
     <link rel="stylesheet" href="/styles/general.css">
     <link rel="stylesheet" href="/styles/hero.css"/>
     <link rel="stylesheet" href="/styles/buttons.css">
