rollback g recaptcha on submit temporary

--- a/courses/trygg-aterstart-for-mammor.html
+++ b/courses/trygg-aterstart-for-mammor.html
@@ -150,9 +150,8 @@
                     </label>
                 </div>
 
-                <button class="button primary g-recaptcha" data-sitekey="6Lfv4U4sAAAAAD78hEZq2NxFOTIpaIpXUDKm8pnY"
-                        data-callback='onSubmit'
-                        data-action='submit'>Skicka intresseanmälan
+                <button type="submit" class="button primary">
+                    Skicka intresseanmälan
                 </button>
 
                 <p class="form-note">
