Add explicit next/redirect action to form

--- a/courses/trygg-aterstart-for-mammor.html
+++ b/courses/trygg-aterstart-for-mammor.html
@@ -103,6 +103,12 @@
                   method="POST"
                   class="form">
 
+                <input
+                        type="hidden"
+                        name="_next"
+                        value="https://www.mammamind.se/thanks.html"
+                >
+
                 <div class="form-field">
                     <label for="name">Namn</label>
                     <input
