Footer order Mobile, insta first & Formspree privacy link target blank

--- a/subpages/privacy.html
+++ b/subpages/privacy.html
@@ -85,16 +85,17 @@
             Formspree behandlar uppgifterna enligt gällande dataskyddslagstiftning (GDPR) och
             fungerar som personuppgiftsbiträde.
 
-            Du kan läsa mer om Formsprees datalagring & integritetspolicy här:  <a href="https://formspree.io/legal/privacy-policy">Formspree privacy policy</a>
+            Du kan läsa mer om Formsprees datalagring & integritetspolicy här:
+            <a href="https://formspree.io/legal/privacy-policy" target="_blank" rel="noopener noreferrer">Formspree privacy policy</a>
         </h2>
 
         <h2>5. Lagringstid <br>
 
             Dina personuppgifter sparas endast så länge det behövs för att:
 
-            <li>hantera din intresseanmälan</li>
-            <li>fullfölja kontakten kring aktuell kurs</li>
-            <li>Skicka ut information kring pågående kurs</li>
+            <li>Hantera din intresseanmälan</li>
+            <li>Fullfölja kontakten kring aktuell kurs</li>
+            <li>Skicka ut information kring kommande & pågående kurs</li>
             Uppgifter raderas senast några månader efter senaste kontakt kring kursen.
         </h2>
 
