Fix CSP form-action to allow Formspree redirect (fixes #1)

--- a/courses/trygg-aterstart-for-mammor.html
+++ b/courses/trygg-aterstart-for-mammor.html
@@ -3,20 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Trygg återstart för mammor | Mamma Mind</title>
-    <meta name="description" content="Trygg och inkännande återstart för nyblivna mammor i Göteborg.">
-    <link rel="icon" href="/assets/svg/favicon.svg" type="image/svg+xml" />
     <meta
             http-equiv="Content-Security-Policy"
             content="
-    default-src 'self';
-    img-src 'self' https:;
-    style-src 'self' 'unsafe-inline';
-    form-action https://formspree.io;
-    base-uri 'self';
-    object-src 'none';
-  "
+                default-src 'self';
+                img-src 'self' https:;
+                style-src 'self' 'unsafe-inline';
+                form-action 'self' https://formspree.io;
+                base-uri 'self';
+                object-src 'none';"
     >
+    <title>Trygg återstart för mammor | Mamma Mind</title>
+    <meta name="description" content="Trygg och inkännande återstart för nyblivna mammor i Göteborg.">
+    <link rel="icon" href="/assets/svg/favicon.svg" type="image/svg+xml" />
     <link rel="stylesheet" href="/styles/general.css">
     <link rel="stylesheet" href="/styles/hero.css"/>
     <link rel="stylesheet" href="/styles/buttons.css">
